[package]
name = "ahasecret"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "color", "help", "usage", "suggestions"] }
aes-gcm = { version = "0.10.3", features = ["aes"] }
base64 = { version = "0.22.1" }
reqwest = { version = "0.12.4", features = ["blocking", "charset", "cookies"] }
scraper = { version = "0.19.0" }
form_urlencoded = { version = "1.2.1" }
serde_json = { version = "1.0.116" }
serde = { version = "1.0.200", features = ["derive"] }
regex = { version = "1.10.4" }
paris = { version = "1.5.15", features = ["macros"] }
url = "2.5.0"
linkify = "0.10.0"
openssl = { version = "0.10.64", features = ["vendored"] } 
pbkdf2 = "0.12.2"
rand_core = { version = "0.6.4" }
sha2 = "0.10.8"
